added aria label to input and a tags

--- a/templates/forms/adoption/adopted.html
+++ b/templates/forms/adoption/adopted.html
@@ -4,7 +4,7 @@
             <h2 class="heading-text">Adopted!</h2>
             <p class="secondary-text center">Another dog found a forever home!</p>
             <p class="center">This will permanently delete the records for this dog and adoption request.</p>
-            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirms this dog was adopted">Yes, Delete
                 <i class="material-icons left">delete</i>
             </button>
         </div>
