--- a/templates/forms/adoption/not-adopted.html
+++ b/templates/forms/adoption/not-adopted.html
@@ -4,7 +4,7 @@
             <h2 class="heading-text">Not Adopted</h2>!</h2>
             <p class="secondary-text center">Such a shame! Let's get this little fella back on the hunt!</p>
             <p class="center">This will permanently delete this adoption record.</p>
-            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirms this dog wasn't adopted">Yes, Delete
                 <i class="material-icons left">delete</i>
             </button>
         </div>
