--- a/templates/forms/dogs/edit-dog.html
+++ b/templates/forms/dogs/edit-dog.html
@@ -7,22 +7,22 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="dog_name" type="text" class="validate" data-length="30">
+                <input name="dog_name" type="text" class="validate" data-length="30" aria-labelledby="Field to edit dog's name">
                 <label for="dog_name">Dog Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="dog_breed" type="text" class="validate" data-length="30">
+                <input name="dog_breed" type="text" class="validate" data-length="30" aria-labelledby="Field to edit dog's breed">
                 <label for="dog_breed">Dog Breed</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="dog_description" class="materialize-textarea" data-length="300"></textarea>
+                <textarea name="dog_description" class="materialize-textarea" data-length="300" aria-labelledby="Field to edit dog's description"></textarea>
                 <label for="icon_telephone">Description</label>
             </div>
         </div>
         <div class="row">
-            <button action="" class="btn waves-effect waves-light" type="submit">Update
+            <button action="" class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirms changes on this dog's register">Update
                 <i class="material-icons left">edit</i>
             </button>
         </div>
