--- a/templates/forms/dogs/register-dog.html
+++ b/templates/forms/dogs/register-dog.html
@@ -7,22 +7,22 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="dog_name" type="text" class="validate" data-length="30" required>
+                <input name="dog_name" type="text" class="validate" data-length="30" aria-labelledby="Field for dog's name" required>
                 <label for="dog_name">Name</label>
             </div>
                 <div class="input-field col s6">
-                <input name="dog_breed" type="text" class="validate" data-length="30" required>
+                <input name="dog_breed" type="text" class="validate" data-length="30" aria-labelledby="Field for dog's breed" required>
                 <label for="dog_breed">Breed</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="dog_description" class="materialize-textarea" data-length="300"></textarea>
+                <textarea name="dog_description" class="materialize-textarea" data-length="300" aria-labelledby="Field for dog's description"></textarea>
                 <label for="icon_telephone">Short description</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Create Account
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Create account for this dog">Create Account
                 <i class="material-icons left">playlist_add</i>
             </button>
         </div>
