--- a/templates/forms/services/feedback-service.html
+++ b/templates/forms/services/feedback-service.html
@@ -6,19 +6,19 @@
         <div class="row">
             <div class="col s6 feedback-radio">
                 <label>
-                    <input class="with-gap" name="feedback-radio" value="positive" type="radio" checked />
+                    <input class="with-gap" name="feedback-radio" value="positive" type="radio"  aria-labelledby="Positive feedback button" checked />
                     <span>Positive</span>
                 </label>
             </div>
             <div class="col s6 feedback-radio">
                 <label>
-                    <input class="with-gap" name="feedback-radio" value="negative" type="radio" />
+                    <input class="with-gap" name="feedback-radio" value="negative" type="radio" aria-labelledby="Negative feedback button" />
                     <span>Negative</span>
                 </label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Leave Feedback
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Submit feedback">Leave Feedback
                 <i class="material-icons left">thumbs_up_down</i>
             </button>
         </div>
