--- a/templates/forms/services/register-service.html
+++ b/templates/forms/services/register-service.html
@@ -7,54 +7,54 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="service_first_name" type="text" class="validate" data-length="40" required>
+                <input name="service_first_name" type="text" class="validate" data-length="40" aria-labelledby="First name for service provider" required>
                 <label for="service_first_name">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="service_last_name" type="text" class="validate" data-length="40" required>
+                <input name="service_last_name" type="text" class="validate" data-length="40" aria-labelledby="Last name for service provider" required>
                 <label for="service_last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="email" type="email" class="validate" data-length="40" required>
+                <input name="email" type="email" class="validate" data-length="40" aria-labelledby="Email for service provider" required>
                 <label for="email">Email</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate" data-length="40" required>
+                <input name="password" type="password" class="validate" data-length="40" aria-labelledby="Password for service provider" required>
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="type_of_service" type="text" class="validate" data-length="40" required>
+                <input name="type_of_service" type="text" class="validate" data-length="40" aria-labelledby="Type of service provided" required>
                 <label for="first_name">Type of service</label>
             </div>
             <div class="input-field col s6">
-                <input name="aff_link" type="text" class="validate" data-length="40">
+                <input name="aff_link" type="text" class="validate" data-length="40" aria-labelledby="Website that will be displayed to users">
                 <label for="aff_link">website</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="discount_code" type="text" class="validate" data-length="40">
+                <input name="discount_code" type="text" class="validate" data-length="40" aria-labelledby="Discount code for users">
                 <label for="discount_code">Discount Code</label>
             </div>
             <div class="input-field col s6">
-                <input name="discount_amount" type="text" class="validate" data-length="40">
+                <input name="discount_amount" type="text" class="validate" data-length="40" aria-labelledby="Amount of discount for users">
                 <label for="discount_amount">Discount Amount</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="service_description" class="materialize-textarea" data-length="400" required></textarea>
+                <textarea name="service_description" class="materialize-textarea" data-length="400" aria-labelledby="Service description" required></textarea>
                 <label for="service_description">Short description</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Create Account
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirm service account creation">Create Account
                 <i class="material-icons left">playlist_add</i>
             </button>
         </div>
