--- a/templates/forms/users/delete-user.html
+++ b/templates/forms/users/delete-user.html
@@ -4,7 +4,7 @@
             <h2 class="heading-text">Delete user</h2>
             <p class="secondary-text center">This will delete this user from the database.</p>
             <p class="center">Are you sure ou want to delete?</p>
-            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirm user account deletion">Yes, Delete
                 <i class="material-icons left">delete</i>
             </button>
         </div>
