--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -9,10 +9,10 @@
             <div class="col s6">
                 <h5>Visit our Social Channels</h5>
                 <ul>
-                    <li><a href="https://www.youtube.com" target="_blank" rel="noopener">Youtube</a></li>
-                    <li><a href="https://www.twitter.com" target="_blank" rel="noopener">Twitter</a></li>
-                    <li><a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a></li>
-                    <li><a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a></li>
+                    <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Link to Facebook home page">Facebook</a></li>
+                    <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Link to Instagram home page">Instagram</a></li>
+                    <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Link to Twitter home page">Twitter</a></li>
+                    <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Link to Youtube home page">Youtube</a></li>
                 </ul>
             </div>
         </div>
