--- a/templates/layout/login-register.html
+++ b/templates/layout/login-register.html
@@ -1,12 +1,12 @@
 
 <div class="row dogs-callout">
     <p>If you are registered</p>
-    <a class="offset-s4 s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('user_login')}}">
+    <a class="offset-s4 s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('user_login')}}" aria-labelledby="Go to login page">
         <i class="material-icons btn-icon">person</i>
         login here
     </a>
     <p>If you aren't registered yet</p>
-    <a class="s4 offset-s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('register')}}">
+    <a class="s4 offset-s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('register')}}" aria-labelledby="Go to register page">
         <i class="material-icons btn-icon">person_add</i>
         register here
     </a>
