--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -13,17 +13,17 @@
             <div class="row">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input id="login_email" name="login_email" type="email" class="validate">
+                        <input id="login_email" name="login_email" type="email" class="validate" aria-labelledby="Account email">
                         <label for="login_email">Email</label>
                     </div>
                     <div class="input-field col s12">
-                        <input id="password" name="password" type="password" class="validate">
+                        <input id="password" name="password" type="password" class="validate" aria-labelledby="Account password">
                         <label for="password">Password</label>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <button class="btn waves-effect waves-light" type="submit">Login
+                <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Submit login details">Login
                     <i class="material-icons right">account_circle</i>
                 </button>
             </div>
