--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -19,7 +19,9 @@
                     <p class="card-title">Dogs</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">pets</i>
-                        <a id="dogs" value="dogs" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
+                        <a id="dogs" value="dogs" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger" aria-labelledby="Show dog registration form">
+                            <i class="material-icons">add</i>
+                        </a>
                     </div>
                     <div class="card-content register-card-content">
                         <p>Add new dog to the database</p>
@@ -36,7 +38,9 @@
                     <p class="card-title">User</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">person</i>     
-                        <a id="users" value="users" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
+                        <a id="users" value="users" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger" aria-labelledby="Show user registration form">
+                            <i class="material-icons">add</i>
+                        </a>
                     </div>
                     <div class="card-content register-card-content">
                         <p>Adopt, hire a service or find the nearest store!</p>
@@ -52,7 +56,9 @@
                     <p class="card-title">Services</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">supervisor_account</i>  
-                        <a id="services" value="services" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
+                        <a id="services" value="services" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger" aria-labelledby="Show service registration form">
+                            <i class="material-icons">add</i>
+                        </a>
                     </div>
                     <div class="card-content register-card-content">
                         <p>Offer your service and find new customers!</p>
@@ -68,7 +74,9 @@
                     <p class="card-title">Stores</p>
                     <div class="card-image">
                         <i class="material-icons card-icon">shopping_cart</i>
-                        <a id="stores" value="stores" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger"><i class="material-icons">add</i></a>
+                        <a id="stores" value="stores" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse form-trigger" aria-labelledby="Show store registration form">
+                            <i class="material-icons">add</i>
+                        </a>
                     </div>
                     <div class="card-content register-card-content">
                         <p>Expose your brand to new consumers!</p>
