--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="col s12 m4 l3 buttons-row">
-            <a href="{{url_for('get_users')}}" class="waves-effect waves-light btn card-action-button form-trigger">
+            <a href="{{url_for('get_users')}}" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Open page with list of users">
                 <i class="material-icons left card-action-button-icon">person</i>
                 <span>Users</span>
             </a>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="col s12 m4 l3 buttons-row">
-            <a href="{{url_for('get_adopt_requests')}}" class="waves-effect waves-light btn card-action-button form-trigger">
+            <a href="{{url_for('get_adopt_requests')}}" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Open page with list of adoption requests">
                 <i class="material-icons left card-action-button-icon">pets</i>
                 <span>Process</span>
             </a>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="col s12 m4 l3 buttons-row">
-            <a href="{{url_for('register')}}" class="waves-effect waves-light btn card-action-button form-trigger">
+            <a href="{{url_for('register')}}" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Open registration page">
                 <i class="material-icons left card-action-button-icon">person_add</i>
                 <span>Register</span>
             </a>
