--- a/templates/dashboard/dash-user.html
+++ b/templates/dashboard/dash-user.html
@@ -18,11 +18,11 @@
             </div>
         </div>
         <div class="col s12 m4 l3 buttons-row">
-            <a id="{{user._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
+            <a id="{{user._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Open form to edit dog">
                 <i class="material-icons left card-action-button-icon">edit</i>
                 <span>Edit</span>
             </a>
-            <a id="{{user._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
+            <a id="{{user._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Open form to delete dog">
                 <i class="material-icons left card-action-button-icon">delete</i>
                 <span>Delete</span>
             </a>
