--- a/templates/forms/dogs/delete-dog.html
+++ b/templates/forms/dogs/delete-dog.html
@@ -4,7 +4,7 @@
             <h2 class="heading-text">Delete dog</h2>
             <p class="secondary-text center">This will delete this dog from the database.</p>
             <p class="center">Are you sure ou want to delete?</p>
-            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Deletes this dog from the database">Yes, Delete
                 <i class="material-icons left">delete</i>
             </button>
         </div>
