--- a/templates/forms/services/edit-service.html
+++ b/templates/forms/services/edit-service.html
@@ -7,54 +7,54 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="service_first_name" type="text" class="validate" data-length="40">
+                <input name="service_first_name" type="text" class="validate" data-length="40" aria-labelledby="Edit service provider's first name">
                 <label for="service_first_name">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input name="service_last_name" type="text" class="validate" data-length="40">
+                <input name="service_last_name" type="text" class="validate" data-length="40" aria-labelledby="Edit service provider's last name">
                 <label for="service_last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="email" type="email" class="validate" data-length="40">
+                <input name="email" type="email" class="validate" data-length="40" aria-labelledby="Edit account email">
                 <label for="email">Email</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate" data-length="40">
+                <input name="password" type="password" class="validate" data-length="40" aria-labelledby="Edit account password">
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="type_of_service" type="text" class="validate" data-length="40">
-                <label for="first_name">Type of service</label>
+                <input name="type_of_service" type="text" class="validate" data-length="40" aria-labelledby="Edit type of service">
+                <label for="type_of_service">Type of service</label>
             </div>
             <div class="input-field col s6">
-                <input name="aff_link" type="text" class="validate" data-length="40">
+                <input name="aff_link" type="text" class="validate" data-length="40" aria-labelledby="Edit service website">
                 <label for="aff_link">website</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="discount_code" type="text" class="validate" data-length="40">
+                <input name="discount_code" type="text" class="validate" data-length="40" aria-labelledby="Edit discount code">
                 <label for="discount_code">Discount Code</label>
             </div>
             <div class="input-field col s6">
-                <input name="discount_amount" type="text" class="validate" data-length="40">
+                <input name="discount_amount" type="text" class="validate" data-length="40" aria-labelledby="Edit discount amount">
                 <label for="discount_amount">Discount Amount</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="service_description" class="materialize-textarea" data-length="400"></textarea>
+                <textarea name="service_description" class="materialize-textarea" data-length="400" aria-labelledby="Edit service description"></textarea>
                 <label for="service_description">Short description</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Update
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirm account changes">Update
                 <i class="material-icons left">check</i>
             </button>
         </div>
