--- a/templates/forms/stores/edit-store.html
+++ b/templates/forms/stores/edit-store.html
@@ -7,50 +7,50 @@
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="store_name" type="text" class="validate" data-length="40">
+                <input name="store_name" type="text" class="validate" data-length="40" aria-labelledby="Edit store name">
                 <label for="store_name">Store Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="email" type="email" class="validate" data-length="40">
+                <input name="email" type="email" class="validate" data-length="40" aria-labelledby="Edit account email">
                 <label for="email">Email</label>
             </div>
             <div class="input-field col s6">
-                <input name="aff_link" type="text" class="validate" data-length="40">
+                <input name="aff_link" type="text" class="validate" data-length="40" aria-labelledby="Edit store website">
                 <label for="aff_link">website</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate" data-length="40">
+                <input name="password" type="password" class="validate" data-length="40" aria-labelledby="Edit account password">
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="discount_code" type="text" class="validate" data-length="40">
+                <input name="discount_code" type="text" class="validate" data-length="40" aria-labelledby="Edit discount code">
                 <label for="discount_code">Discount Code</label>
             </div>
             <div class="input-field col s6">
-                <input name="discount_amount" type="text" class="validate" data-length="40">
+                <input name="discount_amount" type="text" class="validate" data-length="40" aria-labelledby="Edit discount amount">
                 <label for="discount_amount">Discount Amount</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="store_address" class="materialize-textarea" data-length="100"></textarea>
+                <textarea name="store_address" class="materialize-textarea" data-length="100" aria-labelledby="Edit store address"></textarea>
                 <label for="store_address">Address</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="store_description" class="materialize-textarea" data-length="400"></textarea>
+                <textarea name="store_description" class="materialize-textarea" data-length="400" aria-labelledby="Edit store description"></textarea>
                 <label for="store_description">Short description</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Update
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirm changes in store account">Update
                 <i class="material-icons left">check</i>
             </button>
         </div>
