--- a/templates/forms/stores/register-store.html
+++ b/templates/forms/stores/register-store.html
@@ -7,50 +7,50 @@
         </div>
         <div class="row">
             <div class="input-field col s6 offset-s3">
-                <input name="store_name" type="text" class="validate" data-length="40" required>
+                <input name="store_name" type="text" class="validate" data-length="40" aria-labelledby="Store name" required>
                 <label for="store_name">Store Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="email" type="email" class="validate" data-length="40" required>
+                <input name="email" type="email" class="validate" data-length="40" aria-labelledby="Account email" required>
                 <label for="email">Email</label>
             </div>
             <div class="input-field col s6">
-                <input name="aff_link" type="text" class="validate" data-length="40">
+                <input name="aff_link" type="text" class="validate" data-length="40" aria-labelledby="Store website">
                 <label for="aff_link">website</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input name="password" type="password" class="validate" data-length="40" required>
+                <input name="password" type="password" class="validate" data-length="40" aria-labelledby="Account password" required>
                 <label for="password">Password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input name="discount_code" type="text" class="validate" data-length="40">
+                <input name="discount_code" type="text" class="validate" data-length="40" aria-labelledby="discount code">
                 <label for="discount_code">Discount Code</label>
             </div>
             <div class="input-field col s6">
-                <input name="discount_amount" type="text" class="validate" data-length="40">
+                <input name="discount_amount" type="text" class="validate" data-length="40" aria-labelledby="discount amount">
                 <label for="discount_amount">Discount Amount</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="store_address" class="materialize-textarea" data-length="400" required></textarea>
+                <textarea name="store_address" class="materialize-textarea" data-length="400" aria-labelledby="Store address" required></textarea>
                 <label for="store_address">Address</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="store_description" class="materialize-textarea" data-length="400" required></textarea>
+                <textarea name="store_description" class="materialize-textarea" data-length="400" aria-labelledby="Store description" required></textarea>
                 <label for="store_description">Short description</label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit">Create Account
+            <button class="btn waves-effect waves-light" type="submit" aria-labelledby="Confirm store account creation">Create Account
                 <i class="material-icons left">playlist_add</i>
             </button>
         </div>
