--- a/templates/pages/dogs.html
+++ b/templates/pages/dogs.html
@@ -38,18 +38,18 @@
                 </div>
                 {% if session['is_staff'] %}
                 <div class="col s12 m3 card-buttons-row">
-                    <a id="{{dog._id}}" value="adopt"
+                    <a id="{{dog._id}}" value="adopt" aria-labelledby="Show adoption request form"
                         class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons left card-action-button-icon">favorite</i>
                         <span>Adopt</span>
                     </a>
                     {% if session['is_staff'] == 'is_staff' %}
-                    <a id="{{dog._id}}" value="edit"
+                    <a id="{{dog._id}}" value="edit" aria-labelledby="Show edit dog form"
                         class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons left card-action-button-icon">edit</i>
                         <span>Edit</span>
                     </a>
-                    <a id="{{dog._id}}" value="delete"
+                    <a id="{{dog._id}}" value="delete" aria-labelledby="Show delete dog form"
                         class="waves-effect waves-light btn card-action-button form-trigger">
                         <i class="material-icons left card-action-button-icon">delete</i>
                         <span>Delete</span>
