--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -17,7 +17,7 @@
             on how to enhance your experience as a
             dog-owner-to-be or how to help your pack accepting their new buddy.</p>
         <h4>Visit our PAWER Adoption page</h4>
-        <a href="{{url_for('get_dogs')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button">
+        <a href="{{url_for('get_dogs')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button" aria-label="Go to adoptions page">
             <i class="material-icons">pets</i>
             Adopt
         </a>
@@ -34,7 +34,7 @@
             saying how smart and well behaved they are!</p>
         <p>We have a great pool of certified professionals that can help you reaching your goals and even more.</p>
         <h4>Visit our PAWER Services page</h4>
-        <a href="{{url_for('get_services')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button" aria-label="Adoptions page">
+        <a href="{{url_for('get_services')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button"aria-label="Go to services page">
             <i class="material-icons">supervisor_account</i>
             Services
         </a>
@@ -49,7 +49,7 @@
         <p class="secondary-text">Looking for dog food, new toys, medicines and more? We've got your back!</p>
         <p>Go through a variety of shops that offer as many options of products as you can dare to imagine!</p>
         <h4>Visit our PAWER Stores page</h4>
-        <a href="{{url_for('get_stores')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button" aria-label="Stores page">
+        <a href="{{url_for('get_stores')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button" aria-label="Go to stores page">
             <i class="material-icons">shopping_cart</i>
             Stores
         </a>
