--- a/templates/pages/requests.html
+++ b/templates/pages/requests.html
@@ -46,11 +46,11 @@
                     <div class="col s12 m4 l3 buttons-row">
                         <p class="card-title">Adoption</p>
                         <p>Was the dog adopted?</p>
-                        <a value="not_adopted_dog" id="{{request._id}}" class="waves-effect waves-light btn card-action-button form-trigger">
+                        <a value="not_adopted_dog" id="{{request._id}}" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Show not adopted dog form">
                             <i class="material-icons right card-action-button-icon">clear</i>
                             <span>No</span>
                         </a>
-                        <a value="adopted_dog" id="{{request._id}}"  class="waves-effect waves-light btn card-action-button form-trigger">
+                        <a value="adopted_dog" id="{{request._id}}"  class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Show adopted dog form">>
                             <i class="material-icons right card-action-button-icon">done</i>
                             <span>Yes</span>
                         </a>
