--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -51,20 +51,20 @@
                         <p>{{service.service_description}}</p>
                     </div>
                 </div>
-                {% if session['is_staff'] %}
+                {% if session['is_staff'] == 'is_staff' or session['user_type'] == 'users' %}
                 <div class="col s12 m4 l3 buttons-row">
-                    <a id="{{service._id}}" value="feedback" class="waves-effect waves-light btn card-action-button form-trigger">
+                    <a id="{{service._id}}" value="feedback" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Show service feedback form">
                         <i class="material-icons left card-action-button-icon">thumbs_up_down</i>
                         <span>Feedback</span>
                     </a>
                 {% if session['is_staff'] == 'is_staff' %}
                     <a id="{{service._id}}" value="edit"
-                        class="waves-effect waves-light btn card-action-button form-trigger">
+                        class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Show edit service form">
                         <i class="material-icons left card-action-button-icon">edit</i>
                         <span>Edit</span>
                     </a>
                     <a id="{{service._id}}" value="delete"
-                        class="waves-effect waves-light btn card-action-button form-trigger">
+                        class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Show delete service form">
                         <i class="material-icons left card-action-button-icon">delete</i>
                         <span>Delete</span>
                     </a>
