--- a/templates/pages/users.html
+++ b/templates/pages/users.html
@@ -13,7 +13,7 @@
             <p class="secondary-text">Not to worry! Click on the button below and we will bring you back home.</p>
         </div>
         <div class="col offset-s3 s6">
-            <a href="{{url_for('user_home')}}" class="waves-effect waves-light btn card-action-button">
+            <a href="{{url_for('user_home')}}" class="waves-effect waves-light btn card-action-button" aria-labelledby="Go back to Pawer home page">
                 <i class="material-icons right card-action-button-icon">home</i>
                 <span>Bring me back home</span>
             </a>
@@ -44,11 +44,11 @@
                         </div>
                     </div>
                     <div class="col s12 m4 l3 buttons-row">
-                        <a id="{{user._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
+                        <a id="{{user._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Show edit user form">
                             <i class="material-icons left card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a id="{{user._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
+                        <a id="{{user._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger" aria-labelledby="Show delete user form">
                             <i class="material-icons left card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
