--- a/templates/forms/users/register-user.html
+++ b/templates/forms/users/register-user.html
@@ -38,6 +38,8 @@
                 </label>
             </div>
         </div>
+        {% else %}
+        <input name = "is_staff" type = "hidden" value = "not_staff">
         {% endif %}
         <div class="row">
             <div class="input-field col s12">
