--- a/templates/pages/requests.html
+++ b/templates/pages/requests.html
@@ -4,8 +4,11 @@
 <div class="parallax-container">
     <div class="parallax"><img src="/static/images/adopt-image.jpg"></div>
 </div>
-<div class="section white">
+<div class="section white">    
     <div class="container">
+
+    {% include 'layout/user-feedback-message.html' %}
+
     {% if session['is_staff'] != 'is_staff' %}
         <div class="col s12">
             <p class="heading-text">Oops! This area is for staff only.</p>
